OldArchive/e83362960731802ba2e3aa4d8948ef82-3725be9f9ce62f113fc473b4ae69c419/output
+ g++ -std=c++11 -O2 -Wall -pedantic main.cpp
main.cpp:2:7: error: explicit qualification in declaration of ‘i’
 int ::i;
       ^
